# XenoLanguageEXE-for-IDE

./: CMakeLists.txt  README.ja.md  README.md  README.ru.md  XenoLanguage.cpp  XenoLanguage.h  arduino_compat.cpp  arduino_compat.h  auto_build_exe.bat  auto_build_exe.py  auto_xeno_bridge.py  version.rc  xeno_common.cpp  xeno_compiler.cpp  xeno_compiler.h  xeno_debug_tools.h  xeno_host.cpp  xeno_security.cpp  xeno_security.h  xeno_security_config.cpp  xeno_security_config.h  xeno_vm.cpp  xeno_vm.h
src/: XenoLanguage.cpp  XenoLanguage.h
src/xeno/: xeno_common.h
src/xeno/debug/: xeno_debug_tools.cpp  xeno_debug_tools.h
src/xeno/main/: xeno_compiler.cpp  xeno_compiler.h  xeno_vm.cpp  xeno_vm.h
src/xeno/security/: xeno_security.cpp  xeno_security.h  xeno_security_config.h
